--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "cvAngular": {
+    "cv-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,14 +13,14 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cvAngular",
+            "outputPath": "docs/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/assets/lin_logo.ico",
               "src/assets"
             ],
             "styles": [
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "cvAngular:build"
+            "browserTarget": "cv-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "cvAngular:build:production"
+              "browserTarget": "cv-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "cvAngular:build"
+            "browserTarget": "cv-angular:build"
           }
         },
         "test": {
@@ -84,7 +84,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/lin_logo.ico",
               "src/assets"
             ],
             "styles": [
@@ -110,18 +110,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "cvAngular:serve"
+            "devServerTarget": "cv-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "cvAngular:serve:production"
+              "devServerTarget": "cv-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "cvAngular",
+  "defaultProject": "cv-angular",
   "cli": {
     "analytics": false
   }
